user analytics route change
